--- a/WebApplication1/Content/Catalogue.css
+++ b/WebApplication1/Content/Catalogue.css
@@ -14,6 +14,22 @@
     border-radius: 0.3rem;
 }
 
+.button-templated {
+    margin-bottom: 0.5rem;
+    border-radius: 0.3rem;
+    border: none;
+    transition-duration: 0.7s;
+    background-color: #1f53dc;
+}
+.button-templated a {
+    color: white !important;
+}
+
+.button-templated :hover{
+    font-size:20px;
+    font-weight:bold;
+}
+
 .button-template{
     margin-bottom: 0.5rem;
     border-radius: 0.3rem;
