--- a/WebApplication1/Views/Adopt/AnimalInfo.cshtml
+++ b/WebApplication1/Views/Adopt/AnimalInfo.cshtml
@@ -36,5 +36,6 @@
             <div class="col-3">
                 <button class="button-templated" style="margin-top:5%;">@Html.ActionLink("Adopt", "FormSubmit", "AdoptForm", new { petname = Model.APetName }, null)</button>
             </div>
+        </div>
     </div>
 </body>
