--- a/WebApplication1/Views/Pets/Create.cshtml
+++ b/WebApplication1/Views/Pets/Create.cshtml
@@ -59,7 +59,7 @@
         <legend>Image</legend>   
         <div class="editor-field">
             <input id="ImagePath" title="Upload a product image"
-                   type="file" name="file" />
+                   type="file" class="btn btn-default" name="file" />
         </div>
     </fieldset>
 
